fix: update code and fix all problem